--- a/cristmas.html
+++ b/cristmas.html
@@ -77,6 +77,7 @@
 
         body{
             background-image:url('pexels-alexander-kovalev-2847648.jpg');
+            background-repeat: repeat-y;
         }
 
         button {
