--- a/dol.htm
+++ b/dol.htm
@@ -67,6 +67,7 @@
 
         body{
             background-image:url('pexels-alexander-kovalev-2847648.jpg');
+            background-repeat: no-repeat;
         }
 
         h2 {
