--- a/durgapuja.html
+++ b/durgapuja.html
@@ -60,6 +60,8 @@
 
         body{
             background-image:url('pexels-alexander-kovalev-2847648.jpg');
+            background-repeat: no-repeat;
+            
         }
 
         h2 {
