--- a/holi.html
+++ b/holi.html
@@ -71,6 +71,8 @@
 
         body{
             background-image:url('pexels-alexander-kovalev-2847648.jpg');
+            background-repeat: no-repeat;
+            
         }
 
         h2 {
