--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 
         body{
             background-image:url('pexels-alexander-kovalev-2847648.jpg');
+            background-repeat: no-repeat;
+            
         }
 
         h2 {
