--- a/querypage.html
+++ b/querypage.html
@@ -39,6 +39,8 @@
 
         body {
             background-image:url('pexels-pixabay-326333.jpg');
+            background-repeat: no-repeat;
+            
         }
 
         h2 {
