--- a/holi.html
+++ b/holi.html
@@ -70,8 +70,7 @@
         }
 
         body{
-            background-image:url('pexels-alexander-kovalev-2847648.jpg');
-            background-repeat: no-repeat;
+           background-color:rgb(63, 26, 110);
             
         }
 
