--- a/cristmas.html
+++ b/cristmas.html
@@ -95,7 +95,7 @@
 <body>
 
     <ul>
-        <li><a href="exp.html" id="gg">Home</a></li>
+        <li><a href="index.html" id="gg">Home</a></li>
         <li>
             <a href="durgapuja.html" id="gg">Durga Puja</a>
         </li>
