--- a/durgapuja.html
+++ b/durgapuja.html
@@ -89,7 +89,7 @@
 
 <body>
     <ul>
-        <li><a href="exp.html" id="gg">Home</a>
+        <li><a href="index.html" id="gg">Home</a>
         </li>
         <li>
             <a href="kalipuja.html" id="gg">Kali Puja</a>
