--- a/eid.html
+++ b/eid.html
@@ -103,7 +103,7 @@
 
     <ul>
         <li>
-            <a href="exp.html" id="gg">Home</a>
+            <a href="index.html" id="gg">Home</a>
         </li>
         <li>
             <a href="durgapuja.html" id="gg">Durga Puja</a>
