--- a/kalipuja.html
+++ b/kalipuja.html
@@ -108,7 +108,7 @@
 
     <ul>
         <li>
-            <a href="exp.html" id="gg" class="home">Home</a>
+            <a href="index.html" id="gg" class="home">Home</a>
         </li>
         <li>
             <a href="durgapuja.html" id="gg">Durga Puja</a>
