--- a/querypage.html
+++ b/querypage.html
@@ -72,7 +72,7 @@
 <body>
     <ul>
         <li>
-            <a href="exp.html" id="gg" class="home">Home</a>
+            <a href="index.html" id="gg" class="home">Home</a>
         </li>
         <li>
             <a href="durgapuja.html" id="gg">Durga Puja</a>
