--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <body>
 
     <ul>
-        <li><a href="exp.html" id="gg">Home</a>
+        <li><a href="index.html" id="gg">Home</a>
         </li>
         <li>
             <a href="durgapuja.html" id="gg">Durga Puja</a>
